[tool.poetry]
name = "ocsf-lib"
version = "0.4.0"
description = "Tools for working with the OCSF schema"
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "ocsf", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1"
semver = "^3.0.2"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pyright = "^1.1.361"
pytest = "^8.2.0"
pytest-env = "^1.1.3"

[tool.poetry.scripts]
compare = "ocsf.compare.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
strict = ["src/ocsf"]
reportPrivateUsage = false

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "unit: mark a test as a unit test",
]

[tool.pytest_env]
COMPILE_REPO_PATH = "tests/ocsf/compile/ocsf-schema"
COMPILE_SCHEMA_PATH = "tests/ocsf/compile/ocsf-schema.json"

[tool.ruff]
line-length = 120
